feature: use Fly

--- a/.fly/Dockerfile
+++ b/.fly/Dockerfile
@@ -7,6 +7,9 @@ RUN go mod download
 RUN go build -ldflags "-s -w" -o /bin/heimdallr
 
 FROM alpine:latest
+COPY litefs.yml ./
 COPY --from=build /bin/heimdallr /bin/heimdallr
+COPY --from=flyio/litefs:0.5 /usr/local/bin/litefs /bin/litefs
+RUN apk add ca-certificates fuse3 sqlite
 
-CMD ["/bin/heimdallr"]
+ENTRYPOINT litefs mount
