--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -4,9 +4,24 @@ on:
     branches:
       - main
 jobs:
+  lint:
+    name: GolangCi-Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+          cache: false
+      - name: GolangCi-Lint
+        uses: golangci/golangci-lint-action@v6.0.1
+        with:
+          version: v1.59.1
+          args: --timeout=5m
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
+    needs: [lint]
     concurrency: deploy-group    # optional: ensure only one action runs at a time
     steps:
       - uses: actions/checkout@v4
