--- a/fly.toml
+++ b/fly.toml
@@ -9,13 +9,16 @@ primary_region = 'iad'
 [build]
 dockerfile = "_fly/Dockerfile"
 
+[build.args]
+ENV = "test"
+
 [env]
 HEIMDALLR_DEV_MODE_EANBLED = "true"
-HEIMDALLR_BOT_DB = "/litefs/heimdallr-test.db"
+HEIMDALLR_BOT_DB = "/var/db/heimdallr-test.db"
 
 [[vm]]
 size = 'shared-cpu-1x'
 
 [mounts]
 source = "litefs"
-destination = "/var/lib/litefs"
+destination = "/var/db"
