feat: docker support
Also removes old, unused Fly.io config

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,16 @@
-config.toml
-heimdallr
-heimdallr.exe
-heimdallr.db
-.env
-Dockerfile
-.git
-.gitignore
-README.md
-LICENSE
-.dockerignore
+*
+!commands
+!components
+!config
+!globals
+!listeners
+!model
+!scheduled_tasks
+!task
+!utils
+!go.mod
+!go.sum
+!main.go
+!rm_commands.go
+!start.sh
+!litestream.yml
