ci: migrate golangci config

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,25 @@
+version: "2"
+run:
+  tests: true
 linters:
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
   enable:
     - gofmt
     - goimports
-
-run:
-  tests: true
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
