ci: test docker build, improve workflows - Added test-build-image workflow to verify Docker image builds in PRs   without publishing them - Split build and test from the original combined CI workflow, allowing   each to have separate `paths-ignore` filters (style checks vs code   changes) - Updated build-image workflow to ignore non-code files to prevent   unnecessary rebuilds - Added empty .prettierrc so Prettier properly formats files - Updated renovate.json to enable automatic merging of dependency   updates after successful tests

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -10,6 +10,19 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - README.md
+      - .github/workflows/lint.yml
+      - .github/workflows/build-and-test.yml
+      - .github/workflows/test-build-image.yml
+      - Procfile
+      - Aptfile
+      - .editorconfig
+      - .prettierrc
+      - renovate.json
+      - air.conf
+      - config.template.toml
+      - .vscode/
 
 concurrency:
   group: build-and-push
