feat: web dashboard continued.

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,14 +1,17 @@
 version: v2
 plugins:
-  - local: protoc-gen-go
+  #- local: protoc-gen-go
+  - remote: buf.build/protocolbuffers/go:v1.36.11
     out: gen
     opt: paths=source_relative
-  - local: protoc-gen-connect-go
+  #- local: protoc-gen-connect-go
+  - remote: buf.build/connectrpc/go:v1.19.1
     out: gen
     opt:
       - paths=source_relative
       - simple
-  - local: protoc-gen-es
+  #- local: protoc-gen-es
+  - remote: buf.build/bufbuild/es:v2.11.0
     out: web-dashboard/src/gen
     include_imports: true
     opt: target=ts
