chore: Fix Taskfile and Dockerfile

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,25 @@
 *
 !components
 !config
-!globals
+!gen
 !listeners
 !interactions
 !model
+!proto
+!rpcserver
 !scheduled_tasks
 !task
 !utils
+!web-dashboard
+!buf.lock
+!buf.yaml
+!buf.gen.yaml
+!generate.go
 !go.mod
 !go.sum
 !main.go
+!package.json
 !rm_commands.go
 !start.sh
+!Taskfile.yml
 !litestream.yml
