--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -26,13 +26,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-
+      - uses: go-task/setup-task@v1
+      - uses: oven-sh/setup-bun@v2
+        with:
+          node-version: 24
       - uses: actions/setup-go@v6
         with:
           go-version-file: go.mod
 
       - name: Build
-        run: go build -v ./...
+        run: task build
 
   test:
     name: Test
